# fastapi_tutor

./: README.md  alembic.ini  pyproject.toml
app/: config.py  database.py  main.py
app/bookings/: models.py
app/hotels/: models.py
app/migrations/: env.py
app/migrations/versions/: 01f6bc7c4ddf_add_bookings_rooms_and_users_tables.py  127c748965e0_initial_mirgation.py
app/rooms/: models.py
app/users/: models.py
