[tool.poetry]
name = "fastapi-tutor"
version = "0.1.0"
description = ""
authors = ["Vladuslav Dragushin <maxhc@inbox.ru>"]
readme = "README.md"
packages = [{include = "fastapi_tutor"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.104.1"}
uvicorn = "^0.24.0.post1"
sqlalchemy = "^2.0.23"
alembic = "^1.13.0"
asyncpg = "^0.29.0"
environs = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
